# quantoflow-agent-hackathon

./: package-lock.json
backend/: .gitignore  .~lock.sanctions_embeddings.csv#  FaceDetection.py  Trainer.py  embeddings.ipynb  requirements.txt  sanctions_embeddings.csv  sanctions_small.csv
backend/andy/: ingest.py  pyproject.toml
backend/api/: api.py
backend/downloaded_images/Mingshan_Wang/: Mingshan_Wang.avif
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: CameraInput.tsx
