[tool.poetry]
name = "quantoflow-agent-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.7"
unstructured-ingest = "^0.5.9"
unstructured = {version = ">=0.11.0", extras = ["all-eds"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
